updated version 27 feb 2025

--- a/src/App.css
+++ b/src/App.css
@@ -3,8 +3,8 @@
 *{
   font-family: poppins;
   transition: all 0.4s ease !important;
-
 }
+
 input{
   border: none;
   background-color: #f6f6f6;
@@ -21,19 +21,9 @@ input:focus{
 button{
   background-color: #f6f6f6;
 }
-.first-btn{
-  border-radius: 20px;
-  padding: 10px 20px;
-  color: rgba(0, 0, 0, 0.5); /* Darken the placeholder text */
-  background-color: f6f6f6;
-}
-.first-btn:hover{
-  background-color: #e0e0e0;
-}
-
 ::-webkit-scrollbar {
-  width: 12px; 
-  height: 12px;
+  width: 8px; 
+  height: 8px;
 }
 ::-webkit-scrollbar-track {
   background: transparent;
@@ -45,4 +35,20 @@ button{
 }
 ::-webkit-scrollbar-thumb:hover {
   background: black;
+}
+.first-btn{
+  border-radius: 20px;
+  padding: 10px 20px;
+  color: rgba(0, 0, 0, 0.5); /* Darken the placeholder text */
+  background-color: f6f6f6;
+}
+.first-btn:hover{
+  background-color: #e0e0e0;
+}
+
+
+.result{
+  font-size: 19px;
+  font-weight: 400;
+ line-height: 1.8;
 }
